--- a/СSS/styles.css
+++ b/СSS/styles.css
@@ -28,6 +28,26 @@ ul {
   list-style: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* container */
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  outline: 2px solid tomato;
+}
+
 /* logo */
 .logo-blue {
   color: var(--acctent-color);
@@ -78,22 +98,28 @@ ul {
 }
 
 /* hero */
-.hero .hero-title {
+
+.hero-title {
   color: var(--primary-white-color);
+  margin-top: 0px;
+  margin-bottom: 65px;
 
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  text-align: center;
 }
 .hero {
   background-color: var(--footer-bg-color);
+  outline: 1px solid tomato;
+  text-align: center;
 }
 
 /* section */
 .section-title {
+  margin-bottom: 50px;
+
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -103,6 +129,8 @@ ul {
 }
 
 .features .title {
+  margin-bottom: 10px;
+
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
@@ -129,11 +157,20 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.03em;
 }
-.employee-list {
+
+.team-list > .item {
+  padding-bottom: 30px;
+}
+
+.section.employee-list {
+  padding-top: 94px;
+  padding-bottom: 94px;
   background-color: var(--secondary-bg-color);
 }
 
 .work-list .title {
+  margin-bottom: 4px;
+
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -144,6 +181,10 @@ ul {
 .work-list .text {
   line-height: 1.87;
   letter-spacing: 0.03em;
+}
+
+.work-list > .item {
+  padding-bottom: 20px;
 }
 
 /* footer */
@@ -178,13 +219,18 @@ ul {
 /* button */
 
 .button {
+  display: inline-block;
+  border-radius: 4px;
   color: var(--title-text-color);
   background-color: var(--primary-white-color);
   font-family: inherit;
   font-size: 16px;
+
+  text-align: center;
 }
 
 .button.primery {
+  padding: 10px 32px;
   color: var(--primary-white-color);
   background-color: var(--acctent-color);
   font-weight: 700;
@@ -193,6 +239,7 @@ ul {
 }
 
 .button.secondary {
+  padding: 6px 22px;
   color: var(--title-text-color);
   background-color: var(--secondary-bg-color);
   font-weight: 500;
