--- a/СSS/styles.css
+++ b/СSS/styles.css
@@ -28,6 +28,10 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1,
 h2,
 h3,
@@ -42,10 +46,24 @@ ul {
 
 /* container */
 .container {
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
-  outline: 2px solid tomato;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* background-color: teal; */
+  /* outline: 2px solid tomato; */
+}
+
+/* header */
+
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 
 /* logo */
@@ -65,7 +83,28 @@ ul {
 }
 
 /*site-nav*/
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.site-nav .item {
+  /* outline: 1px solid tomato; */
+}
+
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+/* Альтернатива */
+/* .site-nav .item:not(:last-child) {
+  margin-right: 50px;
+} */
+
 .site-nav .link {
+  display: block;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--title-text-color);
 
   font-weight: 500;
@@ -84,7 +123,20 @@ ul {
 }
 
 /*auth-nav*/
+.auth-nav {
+  display: flex;
+  margin-left: auto;
+}
+
+.auth-nav .item + .item {
+  margin-left: 50px;
+}
+
 .auth-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -95,6 +147,9 @@ ul {
 .auth-nav .link:hover,
 .auth-nav .link:focus {
   color: var(--acctent-color);
+}
+.page-header {
+  border: 1px solid #ececec;
 }
 
 /* hero */
@@ -112,11 +167,17 @@ ul {
 }
 .hero {
   background-color: var(--footer-bg-color);
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
   text-align: center;
 }
 
 /* section */
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .section-title {
   margin-bottom: 50px;
 
@@ -126,6 +187,17 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.03em;
   text-align: center;
+}
+/* advantages */
+.section .features {
+  display: flex;
+}
+.features .item {
+  /* background-color: tomato; */
+}
+
+.features .item + .item {
+  margin-left: 30px;
 }
 
 .features .title {
@@ -145,7 +217,25 @@ ul {
   letter-spacing: 0.03em;
 }
 
+/* services */
+.section .services-list {
+  display: flex;
+}
+.services-list .item {
+  background-color: tomato;
+}
+
+.services-list .item + .item {
+  margin-left: 30px;
+}
+/* employees */
+.section .team-list {
+  display: flex;
+}
+
 .team-list .title {
+  margin-top: 30px;
+  margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -158,16 +248,41 @@ ul {
   letter-spacing: 0.03em;
 }
 
-.team-list > .item {
+.team-list .item {
+  text-align: center;
   padding-bottom: 30px;
 }
 
+.team-list .item + .item {
+  margin-left: 30px;
+}
+
 .section.employee-list {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--secondary-bg-color);
 }
 
+/* filter */
+.section .filter {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 34px;
+}
+
+.filter .item {
+  outline: 1px solid tomato;
+}
+
+.filter .item + .item {
+  margin-left: 8px;
+}
+
+/* work-list*/
+
+.section .work-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
 .work-list .title {
   margin-bottom: 4px;
 
@@ -184,11 +299,22 @@ ul {
 }
 
 .work-list > .item {
+  /* width: 370px; */
+  flex-basis: calc((100% - 60px) / 3);
   padding-bottom: 20px;
+  /* margin-right: 30px;
+  margin-bottom: 30px; */
+
+  background-color: tomato;
 }
+/* .work-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+.work-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+} */
 
 /* footer */
-
 .contact-info {
   color: var(--primary-white-color);
   font-style: normal;
@@ -214,6 +340,11 @@ ul {
 
 .footer .logo-white {
   color: var(--primary-white-color);
+}
+
+.footer .logo {
+  display: block;
+  margin-bottom: 20px;
 }
 
 /* button */
